# anyfft

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
anyfft/: __init__.py  _backend.py  _fft.py  _version.py  fft.py  fftpack.py  numpy.py  pyfftw.py  reikna_fft.py  scipy.py
anyfft/_reikna/: _fft.py  _fftconvolve.py  _fftshift.py  _util.py  _version.py
anyfft/_reikna/tests/: test_reikna_fft.py
anyfft/cupy/: __init__.py
anyfft/gpyfft/: __init__.py  _fft.py
anyfft/pyfftw/: __init__.py
anyfft/reikna/: __init__.py  _fft.py  _fftconvolve.py  _fftshift.py  _util.py
anyfft/reikna/tests/: test_reikna_fft.py
anyfft/tests/: test_benchmarks.py
src/anyfft/: _backend.py  cupy.py  fftpack.py  reikna_fft.py
src/anyfft/gpyfft/: _fft.py  _util.py
src/anyfft/reikna/: _fft.py  _fftconvolve.py  _util.py  from reikna.transformations import Annot.py
src/anyfft/reikna/tests/: test_reikna_fft.py
src/anyfft/tests/: test_benchmarks.py
tests/: test_benchmarks.py
