[metadata]
name = anyfft
description = wraps various FFT implementations with single interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/anyfft
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/anyfft

[options]
packages = find:
install_requires =
    numpy
    reikna
python_requires = >=3.7
setup_requires =
    setuptools-scm
zip_safe = False


